Greet-Tweet-Know 1.0.0a9
I fixed a bug that was reported to me by Elazar, *hugs* & thnx!  I have implemented multiple tweet compositions methods.  Including easier access to sending tweets/status update, direct messages, @ replies, and added the ability to automatically re-tweet.  I have put these all under a new file menu named 'Tweets' all are accessible via various keyboard shortcuts.  For example 'CTNL+@' will start a reply & 'CTNL+F' will let you easily re-tweet the selected tweet.  I have also implimented [Return] modifiers so the varios tweets can be composed by pressing [Return].  Return alone starts a reply, Return+Ctrl starts a new tweet, Alt+Return] retweets, and [Shift+Return] starts a DM.  I want to make this way of sending a DM to auto-select the selected friend, if you can, but for now it only loads the 'Send DM' dialog.

I have added icons for almost all of the menu entries.  I am working on adding a vertical toolbar to Greet-Tweet-Know to provide accoss to the most commonly used functions.

I have a lot of plans for making Greet-Tweet-Know more accessible & much more attractive

I'm still working on my new 'Combined View' and 'Friends Manager'.  Once I have those two functioning than I'll be releasing Greet-Tweet-Know version 1.0.0a1.  My projects versioning system is in an RGBa style.  One because I like it, Its feels cool, & is a way for me to be even more artistic.

Committed on: 2009-03-26 @ 11:37:08 AM

--- a/configure.in
+++ b/configure.in
@@ -40,38 +40,9 @@ GLIB_REQUIRED=2.15.0
 GTK_REQUIRED=2.14.0
 GCONF_REQUIRED=1.2.0
 LIBGIO_REQUIRED=2.15.5
-DBUS_REQUIRED=0.61
 LIBCANBERRA_REQUIRED=0.4
 ENCHANT_REQUIRED=1.2.0
 ISO_CODES_REQUIRED=0.35
-
-dnl -----------------------------------------------------------
-dnl D-BUS
-dnl -----------------------------------------------------------
-AC_ARG_ENABLE(dbus,
-              AS_HELP_STRING([--enable-dbus=@<:@no/yes/auto@:>@],
-                             [compile with D-Bus support]), ,
-              enable_dbus=auto)
-
-if test "x$enable_dbus" != "xno"; then
-   dbus_pkgconfig_tmp="dbus-1 >= $DBUS_REQUIRED dbus-glib-1"
-   PKG_CHECK_MODULES(DBUS, $dbus_pkgconfig_tmp, have_dbus=yes, have_dbus=no)
-   if test x$have_dbus = xyes; then
-      AC_DEFINE(HAVE_DBUS, 1, [D-Bus support])
-      dbus_pkgconfig=$dbus_pkgconfig_tmp
-   fi
-else
-   have_dbus=no
-   dbus_pkgconfig=
-fi
-
-if test "x$enable_dbus" = "xyes"; then
-   if test "x$have_dbus" != "xyes"; then
-      AC_MSG_ERROR([Couldn't find D-Bus.])
-   fi
-fi
-
-AM_CONDITIONAL(HAVE_DBUS, test x$have_dbus = xyes)
 
 dnl -----------------------------------------------------------
 dnl GNOME Keyring
@@ -119,7 +90,6 @@ PKG_CHECK_MODULES(GREET_TWEET_KNOW,
 	gconf-2.0 >= $GCONF_REQUIRED
 	$gnome_keyring_pkgconfig
 	$iso_codes_pkgconfig
-	$dbus_pkgconfig
 ])
 AC_SUBST(GREET_TWEET_KNOW_CFLAGS)
 AC_SUBST(GREET_TWEET_KNOW_LIBS)
@@ -177,12 +147,11 @@ data/Makefile
 data/greet-tweet-know.desktop.in
 help/Makefile
 src/Makefile
-po/Makefile.in
+po/Makefile
 ])
 
 echo
 echo "Prefix:        $prefix"
 echo "Spell:         $have_enchant"
-echo "DBUS:          $have_dbus"
 echo "GNOME Keyring: $have_gnome_keyring"
 echo
