Greet-Tweet-Know 0.0.0aF - changed default install path.
configure was originally using autoconfs default install path, /usr/local, I've changed it so configure will default to using /usr as the install.  I've also added a call to autoconf's AC_DEFAULT_PREFIX macro to set '/usr' as well.  Now Greet-Tweet-Know should be much more easily used on most common Linux distros.

Committed on: 2009-03-29 @ 10:41:20 AM

--- a/configure.in
+++ b/configure.in
@@ -7,6 +7,8 @@ AC_CONFIG_HEADERS(config.h)
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-bzip2])
 
+AC_DEFAULT_PREFIX(/usr)
+
 AM_MAINTAINER_MODE
 
 AM_PROG_LIBTOOL
