Greet-Tweet-Know 1.0.0a9: Friend Manager!
My 'Friends Manager' is finally working.  It has there features: 'Add', 'Remove', & 'About'.  These buttons are insensitive, ie 'grey out', by default, until a friend and/or follower is selected.  They're not becoming sensitive correctly when a friend is selected which I'm working.

The 'About' feature is designed to desplay the users profile, tweets, & etc that may help you decide to follow, drop, or block.  All of this information is displayed in a pop-up dialog.  I still to add a parser / libxml method to combine to pull the user's profile.

I'm still working on Greet-Tweet-Know's combined view, speaking of methods & support I need to add to Greet-Tweet-Know's parser.  I will be creating this view using a libXML method to combined tweets of the those your following, your @ replies, and your direct messages and than combined them, sort them by date, and reduce the parsed data into one single view.  Or I combined all of pages into one GList, sort the GList by date, and display remove the last 40 entries.  Which ever will the most efficant.  Of course this will only be the 1st iteration of Greet-Tweet-Know's combined view & it will need to be refactored as I can already think of several more elegent ways of doing this.

I still need to create Greet-Tweet-Know's new vertical menu with the most often used features.  Than I'll be ready for my Greet-Tweet-Know's inital release & I'll get to create packages for various distributions, especially openSuSE w/help from Build Service, which rocks - just stay out of IRC.

For us oss programming uberChcks I'm trying to start a community where we can get together to discuss our projects the latest language releases & specs.  Our website is @ http://uberChicks.Net/ though its very slowly growing, like all of us I have a ton of projects & those make me feel the most inspired & motivated.  I plan on making ubeChicks a place for all women using C, GTK, GNOME, Linux, and etc for artistic & se

--- a/configure.in
+++ b/configure.in
@@ -89,7 +89,7 @@ PKG_CHECK_MODULES(GREET_TWEET_KNOW,
 	libcanberra-gtk >= $LIBCANBERRA_REQUIRED
 	libxml-2.0 >= $LIBXML_REQUIRED
 	gobject-2.0
-	g-thread-2.0
+	gthread-2.0
 	gconf-2.0 >= $GCONF_REQUIRED
 	$gnome_keyring_pkgconfig
 	$iso_codes_pkgconfig
