--- a/config.h.in
+++ b/config.h.in
@@ -67,9 +67,6 @@
    */
 #undef LT_OBJDIR
 
-/* Name of package */
-#undef PACKAGE
-
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
@@ -85,8 +82,9 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
+/* Define where this package was installed to. */
+#undef PACKAGE_PREFIX
+
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
 
-/* Version number of package */
-#undef VERSION
