--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,13 +1,14 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 [encoding: UTF-8]
-[type: gettext/glade]data/add_friend_dlg.xml
-[type: gettext/glade]data/account_dlg.xml
-[type: gettext/glade]data/lists_dlg.xml
-[type: gettext/glade]data/main_window.xml
-[type: gettext/glade]data/prefs_dlg.xml
-[type: gettext/glade]data/send_message_dlg.xml
-[type: gettext/glade]data/spell_dlg.xml
+[type: gettext/glade]data/add_friend_dialog.ui
+[type: gettext/glade]data/account_dialog.ui
+[type: gettext/glade]data/followers_dialog.ui
+[type: gettext/glade]data/friends_manager.ui
+[type: gettext/glade]data/main_window.ui
+[type: gettext/glade]data/preferences_dialog.ui
+[type: gettext/glade]data/send_message_dialog.ui
+[type: gettext/glade]data/spell_dialog.ui
 data/greet-tweet-know.desktop.in
 data/greet-tweet-know.schemas.in
 
