*highly unstable* partial bug fixes.
I am programming my 'combined view', which will contain all of your @ replies, @ mentions, direct messages, and your friends tweets all in one view pain.  I'm also patchng an odd bug I've found when someone your following has just changed their avatar.

Committed on: 2009-04-02 @ 01:18:34 PM

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,8 @@
 C_STD_MODE=gnu99
 AM_CFLAGS=						\
 	-I$(top_srcdir)                          	\
+	-I${top_builddir}				\
+	-DBUILDDIR=\""${top_builddir}"\"		\
 	-DPREFIX="\"$(prefix)"\"			\
 	-DSYSCONFDIR=\""$(sysconfdir)"\"		\
 	-DDATADIR=\""$(datadir)"\"              	\
@@ -41,9 +43,10 @@ greet_tweet_know_SOURCES = 				\
 	friend-manager.c	friend-manager.h	\
 	followers-dialog.c	followers-dialog.h	\
 	tweets.c		tweets.h		\
+	images.c		images.h		\
 	tweet-list.c		tweet-list.h
 
 
-greet_tweet_know_LDADD=						\
-	$(GREET_TWEET_KNOW_LIBS)					\
+greet_tweet_know_LDADD=			\
+	$(GREET_TWEET_KNOW_LIBS)	\
 	$(ENCHANT_LIBS)
