Greet-Tweet-Know 0.0.0c9: A bunch++
I've reoganized Greet-Tweet-Know's menu, added several additional friend management functions, added unfollow & blocking to friends manager, friends view, & manually through a menu entree.

I've extended my friends manager by cleaning up several methods more important to every one using it is that I've extended the user profile information that's displayed in their 'information' popup.  It now displays their user name, nick name, friends & followers, total tweets, their bio & their avatar.

I've also drastically improved Greet-Tweet-Know's networking stack.  Its entire networking stack & methods are being re-wrote.  Several things that are already in place is a check against twitters API limits to avoid Greet-Tweet-Know from going 'offline'.  I still have to implement this across all networking methods.  Right now its only implemented in methods which request more than one page.  It will be easy enough to impliment across the entire request system, its just not something I've gotten to yet.  I'm focusing on rewriting Greet-Tweet-Know's network stack so it acts on imediate request.  Right now it uses a soup queue for all request & relys on libsoup call backs, which would be fine except that the ways its implemented is causing extreme bloat since all posted data is continuously allocated & rarely freed.  Not to mention that in most cases its simply not needed and keeps several useful things from being implemented.  You'll see what I mean :-)

I have also began to extend how 'users', ie friends & followers, are handled. To many methods & request are being duplicated in multiple areas.  I can find no reason for this except that much of this code was wrote whoever did so was playing with private objects.  Requardless a lot of clean-up & refactoring is needed & I've only just began to work on all of it...I'm just one girl after all (read: *help needed*...pretty please).

& Though I won't be including it in my release of Greet-Tweet-Know

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([greet-tweet-know], [1.0.0a9], [http://uberChicGeekChick.Com/?projects=Greet-Tweet-Know], [greet-tweet-know])
+AC_INIT([greet-tweet-know], [1.0.0e9], [http://uberChicGeekChick.Com/?projects=Greet-Tweet-Know], [greet-tweet-know])
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (C) 2009 Kaity G. B.])
 
