Greet-Tweet-Know 0.0.0c9: further improved users managerment.
I have separated out user management.  These control how friends & followers and lists of them are handled.  The user stuct is used when parsing timelines & list of friends & followers.  These lists are used in Greet-Tweet-Know's friends manager, when selecting a friends tweets to view, when selecting a friend to send a DM to, and in various other places.  I have centeralized the management of these structures and lists into 'users.c'.

How users & their profiles need to be refactored & will be especially needed when I implement multiple accounts & services.  For now though I have improved memory management & gathered more data about users as well.  I want to refactor users into full objects but for now I've improved them as much as I'll be doing for this version.

My next focal point will be finishing up my new 'combined view' followed by full dubugging testing. *w00t* I'm almost there & then I'll be creating packages & trying to get more attention for Greet-Tweet-Know & connectED.

Committed on: 2009-04-05 @ 01:47:21 PM

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -42,6 +42,7 @@ greet_tweet_know_SOURCES = 				\
 	followers-dialog.c	followers-dialog.h	\
 	friend-manager.c	friend-manager.h	\
 	tweets.c		tweets.h		\
+	users.c			users.h			\
 	images.c		images.h		\
 	tweet-list.c		tweet-list.h
 
