Greet-Tweet-Know: 0.0.0eC: uber Friend Manager, Twitter timeout issues removed, & Users profile includes avatar.
I have done a ton today all to bash out more & more bugs before my initial distro release.

I have further expanded my friend manager & put it through a day of testing, debugging, & improvements.  My friends manager now correctly list's your relationship to your friends & follows correctly.  I did have to do a lil hacking of my beautiful algorhythm.  Its actually come out more beautifully now.

Following, Unfollowing, & Blocking all work correctly.  I've also expanded the user's profile popup.  All possible information is displayed including their *ta-da* avatar.

I have also implimented a network timer & monitoring of Twitter's API limit.  Its now implemented over all of Greet-Tweet-Know's networking methods.  So now its next to impossible to have any segfault of network limits.

I've also furthe extended image handling which is for a feature I came up with & am very excited to impliment.

Committed on: 2009-04-07 @ 09:40:53 PM

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -13,6 +13,7 @@ gtkbuilder_DATA = 			\
 	preferences.ui			\
 	main-window.ui			\
 	send-message-dialog.ui		\
+	user-profile.ui			\
 	popup-dialog.ui			\
 	friends-manager.ui		\
 	followers-dialog.ui		\
