--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -249,7 +249,8 @@ gtkbuilder_DATA = 			\
 	preferences.ui			\
 	main-window.ui			\
 	send-message-dialog.ui		\
-	popup-dialog.ui		\
+	user-profile.ui			\
+	popup-dialog.ui			\
 	friends-manager.ui		\
 	followers-dialog.ui		\
 	accounts-dialog.ui
